Don't let .dijitAlignLeft overflow:hidden override .dijitContentPane's overflow:auto.   Fixes #13109 !strict.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@25262 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -775,10 +775,10 @@ DIV.dijitArrowButton {
 	overflow: hidden;
 }
 
-body .dijitAlignTop,
-body .dijitAlignBottom,
-body .dijitAlignLeft,
-body .dijitAlignRight {
+.dijitAlignTop,
+.dijitAlignBottom,
+.dijitAlignLeft,
+.dijitAlignRight {
 	position: absolute;
 	overflow: hidden;
 }
@@ -786,7 +786,7 @@ body .dijitAlignRight {
 body .dijitAlignClient { position: absolute; }
 
 /*
- * BorderContaienr
+ * BorderContainer
  *
  * .dijitBorderContainer is a stylized layout where panes have border and margin.
  * .dijitBorderContainerNoGutter is a raw layout.
